edits through discussion

--- a/writing/Manuscript_June2021.Rmd
+++ b/writing/Manuscript_June2021.Rmd
@@ -338,18 +338,20 @@ site_difference_out = summary(site_difference)
 We found steady changes in the recognizability of children's drawings as a function of age (Figure \ref{fig:main-results}), replicating prior work using the verbal-cue paradigm under less controlled settings [@long2021parallel]. 
 Moreover, we found that this age-related change did not depend on the drawing task children completed: Children's drawings were just as recognizable when they were cued with a photograph ("Draw this rabbit as it looks in the picture") as when they were cued with the category label ("Can you draw a rabbit?").  
 While we thought that older children might produce more recognizable drawings when cued with a photograph of a highly prototypical exemplar, as adult participants do [@yang2021visual], we did not find evidence of an interaction between age and cue type. 
-However, we did observe a main effect of geographical site: children in Beijing, China produced drawings that were more recognizable than children in San Jose, USA (Table 1), reflecting steeper age-related gains earlier in development. 
+However, we did observe a main effect of geographical site: children in Beijing, China produced drawings that were more recognizable than did children in San Jose, USA (Table 1), reflecting steeper age-related gains earlier in development. 
 
 In follow-up analyses, we investigated potential sources of variation that might explain these site-related differences. 
-We initially hypothesized that any differences in drawing recognizability between sites would be mediated by the amount of effort children expended while drawing or their tracing abilities. 
+We initially hypothesized that any differences in drawing recognizability between sites could be mediated by the amount of effort children expended while drawing or their tracing abilities. 
 Figure \ref{fig:effort-covariates} shows three effort covariates -- average intensity, number of strokes used, and time spent drawing -- measured for each drawing as a function of children's age, drawing task, and geographical site.  
 We found that children spent more time drawing when prompted with a picture cue than a verbal cue, and that children in the Beijing group spent more time on their drawings than their counterparts in San Jose. 
-By contrast, children's tracing abilities did not vary across geographical sites: Figure \ref{fig:tracing} shows the average tracing score at each age at each site. While children's tracing abilities increased steadily with age, as in prior work [@long2021parallel], children from both sites produced equally good tracings.
+By contrast, children's tracing abilities did not vary across sites: Figure \ref{fig:tracing} shows the average tracing score at each age at each site. While children's tracing abilities increased steadily with age, as in prior work [@long2021parallel], children from both sites produced equally good tracings.
 
 We then included children's average tracing scores and effort covariates measured for each drawing (average intensity, number of strokes used, and time spent drawing) as fixed effects into a second generalized linear mixed-effects model (see Statistical Models). If effort and/or tracing ability is sufficient to account for the differences between sites, we reasoned that we should no longer observe a main effect of geographical site on drawing recognizability in this expanded statistical model. Contra this hypothesis, we still observed a significant effect of geographical site (see Table 2), even having accounted for the effect of individual differences in tracing ability. We also found that the amount of time a child spent drawing negatively predicted recognizability -- indicating that spending more time on a drawing did not necessarily result in a more recognizable drawing. Together, these results suggest that these site differences in the ability to produce recognizable drawings are not explained by differences in effort or tracing ability. 
 
+**JEFAN QUERY: I noticed that while draw duration was a negative predictor of recognizability, number of strokes was a positive predictor. We comment on the former, but not the latter. Could it be potentially confusing to a reader if we do not mention the latter?**
+
 ### Exploratory Analyses
-In a set of exploratory analyses, we examined how the developmental trajectory of the recognizability of children's drawings differ for different object categories. Intuitively, some object categories (e.g., cat) may be easier to draw than others (e.g., watch), resulting in shallower or steeper changes in recognizability over age. However, we did not have strong hypotheses about how these trajectories might additionally vary with geographical locations. 
+In a set of exploratory analyses, we examined how the developmental trajectory for drawing recognizability varied across object categories. Intuitively, some object categories (e.g., cat) may be easier to draw than others (e.g., watch), resulting in shallower or steeper changes in recognizability over age. However, we did not have strong hypotheses about how these trajectories might additionally vary with geographical locations. 
 
 Figure \ref{fig:item-effects} shows considerable variation in drawing recognizability across the 12 categories as a function of geographical site and age.  For example, certain distinctions between similar categories (e.g., cats and rabbits) were more difficult to make, especially for younger children. In addition, children in the Beijing group produced more recognizable drawings of certain categories at all ages -- including airplanes, birds, and rabbits -- while older children in San Jose produced more recognizable drawings of bikes. Figure \ref{fig:example-drawings} shows recognizable, randomly sampled example drawings from 6-year-olds at each category, site, and condition. As a whole, these exploratory analyses provide converging evidence for systematic differences between object categories and geographical site that are not easily attributable to differences in effort.
 
@@ -579,26 +581,40 @@ ggplot(item_effects_not_spread, aes(x=as.numeric(age_numeric), y=mean, color=sit
 ```
 
 # General Discussion
-Here we examined developmental change in children's ability to produce recognizable drawings of familiar object concepts and potential variation in task performance due to demands on memory. 
-We found steady improvement from 4-9 years of age in two groups of children tested in different sites, replicating prior work [@long2021parallel]. 
+Here we examined developmental change in children's ability to produce recognizable drawings of familiar visual concepts, and the degree to which this ability is constrained by retrieval of diagnostic attributes from memory. 
+We manipulated memory demands by either cueing children with a category label ("Can you draw a [cat]?") or a color photo ("Can you draw this [cat] as it looks in the picture?"), and measured the recognizability of each drawing to adult observers. 
+To evaluate the generality of our findings, we recruited two groups of children in different sites: San Jose, USA and Beijing, China. 
+We found steady improvement from 4-9 years of age in both groups of children, replicating prior work conducted in a field setting [@long2021parallel].
+We did not find an effect of cue type, however, suggesting that younger children's drawings are unlikely to be constrained by their ability to recall category-diagnostic visual features when they are trying to draw them. 
+On the other hand, we discovered that drawing recognizability differed between sites, with children in the Beijing group having produced more recognizable drawings than those in the San Jose group. 
 
-We found that asking children to draw categories when provided with a verbal cue ("Can you draw a [cat]?") vs. a picture cue ("Can you draw this [cat] as it looks in the picture?") had little effect on the recognizability of the drawings that children produced. While older children may have integrated specific visual information that was present in the photographs, in keeping with prior work [@bremmer1984prior], this did not seem to change how recognizable their drawings were to outside observers. Thus, these results suggest that younger children's drawings are unlikely to be constrained by their ability to recall category-diagnostic visual features when they are trying to draw them. 
+To follow up on this effect of site, we tested two potential sources of variation: visuomotor control and effort. 
+Insofar as differences in visuomotor control could explain differences between groups, we reasoned that this would manifest as a difference in tracing ability that predicts variation in drawing recognizability. 
+Instead, we found that children across the two sites were indistinguishable with respect to tracing ability on average, although individual tracing scores were strong predictors of the recognizablity of their own drawings. 
+Next, we evaluated whether there were systematic differences in effort between the two groups, as measured by the amount of time each child spent producing their drawings and the number of strokes drawn. 
+However, we also found that these effort measures could not account for differences in drawing recognizability between groups. 
+In exploratory analyses, we also discovered that the groups differed with respect to which visual concepts were easier for children to convey in their drawings, perhaps reflecting different patterns of exposure to these concepts. 
+**JEFAN QUERY: The previous six sentences were edited for clarity but are redundant with similar sentences in the results section. Perhaps it would be more effective to consolidate them (in Results?) and summarize them more concisely here?**
+While such group differences are intriguing, they are consistent with a number of other potential explanations.
+Further systematic investigation within and between geographical, socioeconomic, and cultural contexts will be crucial for producing more precise characterization of developmental variability in drawing behavior, itself critical to strongly evaluate causal theories of such variation [@amir2020cross, @carstensen2021investigating, @winner1989can, @kuwabara2016cultural].
+We have made our drawing dataset publicly available to contribute to this more cumulative effort and to reduce barriers to investigation of other aspects of these drawings other than their recognizability, such as which visual features children prioritized in their drawings, the order in which they drew them, as well as variation in visual style [@gernhardt2015cultural, @senzaki2014holistic]. 
 
-Instead, we found that the recognizability of children's drawings differed between our two different geographical sites -- Beijing, China and San Jose, USA  Why might this be the case?  Our initial hypothesis was that children who had daily practice with a non-orthographic, complex writing system would exhibit greater dexterity in our tracing assessment task -- and that this dexterity could be a factor in how recognizable their drawings were.  However, children across the two sites showed equivalent shape tracing abilities, despite the fact that children's individual tracing scores were strong predictors of the recognizability of the drawings that they produced. A second possibility is that children from preschools near Beijing were simply more engaged with the task than children recruited at a children's museum outside San Jose, USA: A more academic context could have created an environment in which children felt particularly incentivized to spend more effort on their drawings. Nonetheless, our measures of drawing's effort (e.g., amount of time spent drawing, number of strokes made) did not account for differences in recognizability across sites. Furthermore, we saw systematic differences in the object categories that were more or less recognizable across sites, which is not well-explained by this account. Thus, this finding both confirms the idea that children's visuomotor abilities strongly influence the recognizability of the drawings they produce, yet further suggests that it is far from the only factor that does so.
+Another natural question for future work concerns the relationship between the kind of experience children have with these visual concepts and the way they produce drawings of them. 
+For example, if some children are exposed to a wide variety of illustrations of some concepts but not others (e.g., in books or other media), they may also be able to produce more recognizable drawings of those concepts. 
+Conversely, if some children spend more time drawing certain visual concepts but not others (e.g., in school or at home), they may also be better at recognizing graphical representations of them in other contexts, and perhaps explicitly identifying their diagnostic features. 
+Prior work has found that older children not only produce more recognizable drawings of object categories, but also tend to be better at recognizing other children's drawings [@long2021parallel], providing evidence that visual production and recognition abilities are related throughout childhood at the group level.
+However, further investigation will be necessary for understanding what kinds of experience are responsible for concurrent developmental changes in these two behaviors at the individual level.
 
-While many have sought to examine variation across different cultural contexts in children's drawings [@winner1989can] or cognitive abilities that may be relevant to children's drawing abilities -- including object recognition [@kuwabara2016cultural] -- we note that this is there is substantial variation within different geographical locations and countries that often goes unmeasured [@amir2020cross]. Indeed, this unmeasured variation within sites may lead to the low replicability of some cross-cultural findings [@carstensen2021investigating]. For example, some work has suggested that the distinction between wheat vs. rice farming traditions explains  variation in cultural practices within China [@talhelm2014large]. We thus caution against a strong interpretation of the observed site differences, as we believe that drawings from children within the same country -- or even area code --  may differ in the very same ways children's drawings differed in this dataset. For example, a final possibility is that the children we recruited from Beijing vs. San Jose could differ widely in the amount of time they spending practicing drawing. If so, then children who spend more time drawing may simply have more experience communicating about the diagnostic features of different object categories.
+**JEFAN QUERY: We currently do not have a paragraph that expands on the null effect of cue type. Though perhaps we could, for "balance?"**
 
-Of course, these results of course do not preclude the possibility that children's drawings differed across these two drawing tasks or geographical sites in other interesting ways beyond their recognizability. Some work has shown that young children across different cultural contexts tend to produce different tadpole drawings of varying heights and with different amounts of detail [@gernhardt2015cultural] and place a horizon line in systematically different locations when drawing scenes [@senzaki2014holistic]. Thus, finer-grained measurements of these drawings could reveal differences -- with respect to the exact visual features that children chose to include, the strategies they employed while drawing, or the order in which they chose to draw certain elements of these categories.  We have thus made this dataset and the resulting code publicly available for these exploratory analyses.
+In sum, our findings advance our understanding of the relative impact of age, task settings, and geographical context on the ability of children to communicate their knowledge about familiar visual concepts by drawing. 
+More broadly, we believe our approach to concurrently quantifying multiple sources of variation in the context of rich, naturalistic behaviors will lead to more robust and unified theories of cognitive development. 
 
-However, we think a natural question for future work concerns the relationship between the degree to which  difference kinds of developmental experience drawing or learning about visual concepts changes how children draw and recognize them. In a U.S. based sample, prior work found that older children not only produce more recognizable drawings of object categories but tend to be better skilled at recognizing other children's drawings [@long2021parallel], hinting at a relationship between production and recognition. Thus, if children in different environmental contexts tend to spend more time practicing drawing, these children may also be more skilled at recognizing drawings of object categories and perhaps explicitly identifying the distinctive visual features of these categories.
-
-Finally, we note that while this work moves beyond investigating the drawings of children at a single geographical location, these children are still in many ways non-representative of the general population. For example, children in more rural populations may spend considerably less time both consuming and producing drawings of object categories. Thus, these developmental trajectories could thus vary in several ways that are not captured by the populations represented in the the present dataset. 
-
-Nonetheless, these results take a first step towards characterizing the consistency in the developmental trajectory of children's drawings.  We propose that the systematic collection of digital drawings from children with a wide variety of experiences will help uncover the myriad factors that drive the developmental changes in children's drawings -- and in turn help us understand how different cognitive systems coordinate to produce this complex behavior. 
+**JEFAN QUERY: Is there any way to hijack this APA template to force figures/tables to appear in the text close to where they are mentioned, rather than all the way at the end?**
 
 # Acknowledgements  
 [BLINDED]
-<!-- We thank Yi Feng and Megan Merrick for assistance with data collection, with whom this project would have not been possible. We also gratefully acknowledge the San Jose Children's Discovery Museum for their collaboration. We are also thankful to all of the parents at XX and XX preschool whose children participated. We also thank the members of the Stanford Language and Cognition lab for their feedback. This work was funded by an NSF SPRF-FR Grant \#1714726 to BLL and a Jacobs Foundation Fellowship to MCF.  -->
+<!-- We thank Yi Feng and Megan Merrick for assistance with data collection. We also thank the San Jose Children's Discovery Museum for their collaboration, as well as the parents at XX and XX preschool whose children participated. Thanks to members of the Stanford Language and Cognition lab for their feedback. This work was funded by an NSF SPRF-FR Grant \#1714726 to BLL and a Jacobs Foundation Fellowship to MCF.  -->
 
 \newpage
 
