address one of the queries while fresh

--- a/writing/Manuscript_June2021.Rmd
+++ b/writing/Manuscript_June2021.Rmd
@@ -340,20 +340,23 @@ Moreover, we found that this age-related change did not depend on the drawing ta
 While we thought that older children might produce more recognizable drawings when cued with a photograph of a highly prototypical exemplar, as adult participants do [@yang2021visual], we did not find evidence of an interaction between age and cue type. 
 However, we did observe a main effect of geographical site: children in Beijing, China produced drawings that were more recognizable than did children in San Jose, USA (Table 1), reflecting steeper age-related gains earlier in development. 
 
-In follow-up analyses, we investigated potential sources of variation that might explain these site-related differences. 
-We initially hypothesized that any differences in drawing recognizability between sites could be mediated by the amount of effort children expended while drawing or their tracing abilities. 
+To follow up on this effect of site, we tested two potential sources of variation: visuomotor control and effort. 
+Insofar as differences in visuomotor control could explain differences between groups, we reasoned that this would manifest as a difference in tracing ability that predicts variation in drawing recognizability. 
+Instead, we found that children across the two sites were indistinguishable with respect to tracing ability on average (Figure \ref{fig:tracing}), although individual tracing scores were strong predictors of the recognizablity of their own drawings, as in prior work [@long2021parallel]. 
+Next, we evaluated whether there were systematic differences in effort between the two groups, as measured by the amount of time each child spent producing their drawings and the number of strokes drawn. 
 Figure \ref{fig:effort-covariates} shows three effort covariates -- average intensity, number of strokes used, and time spent drawing -- measured for each drawing as a function of children's age, drawing task, and geographical site.  
-We found that children spent more time drawing when prompted with a picture cue than a verbal cue, and that children in the Beijing group spent more time on their drawings than their counterparts in San Jose. 
-By contrast, children's tracing abilities did not vary across sites: Figure \ref{fig:tracing} shows the average tracing score at each age at each site. While children's tracing abilities increased steadily with age, as in prior work [@long2021parallel], children from both sites produced equally good tracings.
+We found that children spent more time drawing when prompted with a picture cue than a verbal cue, and that children in the Beijing group spent more time on their drawings than their counterparts in San Jose.
 
-We then included children's average tracing scores and effort covariates measured for each drawing (average intensity, number of strokes used, and time spent drawing) as fixed effects into a second generalized linear mixed-effects model (see Statistical Models). If effort and/or tracing ability is sufficient to account for the differences between sites, we reasoned that we should no longer observe a main effect of geographical site on drawing recognizability in this expanded statistical model. Contra this hypothesis, we still observed a significant effect of geographical site (see Table 2), even having accounted for the effect of individual differences in tracing ability. We also found that the amount of time a child spent drawing negatively predicted recognizability -- indicating that spending more time on a drawing did not necessarily result in a more recognizable drawing. Together, these results suggest that these site differences in the ability to produce recognizable drawings are not explained by differences in effort or tracing ability. 
+We then included children's average tracing scores and effort covariates measured for each drawing (average intensity, number of strokes used, and time spent drawing) as fixed effects into a second generalized linear mixed-effects model (see Statistical Models). 
+If effort and/or tracing ability is sufficient to account for the differences between sites, we reasoned that we should no longer observe a main effect of geographical site on drawing recognizability in this expanded statistical model.
+Instead, we observed a significant effect of geographical site (see Table 2), even after having accounted for the effect of individual differences in tracing ability. We also found that the amount of time a child spent drawing negatively predicted recognizability -- indicating that spending more time on a drawing did not necessarily result in a more recognizable drawing. Together, these results suggest that these site differences in the ability to produce recognizable drawings are not explained by differences in effort or tracing ability. 
 
 **JEFAN QUERY: I noticed that while draw duration was a negative predictor of recognizability, number of strokes was a positive predictor. We comment on the former, but not the latter. Could it be potentially confusing to a reader if we do not mention the latter?**
 
 ### Exploratory Analyses
-In a set of exploratory analyses, we examined how the developmental trajectory for drawing recognizability varied across object categories. Intuitively, some object categories (e.g., cat) may be easier to draw than others (e.g., watch), resulting in shallower or steeper changes in recognizability over age. However, we did not have strong hypotheses about how these trajectories might additionally vary with geographical locations. 
+In a set of exploratory analyses, we examined how the developmental trajectory for drawing recognizability varied across object categories. For example, some object categories (e.g., cat) may be easier to draw than others (e.g., watch), resulting in shallower or steeper changes in recognizability over age. However, we did not have strong hypotheses about how these trajectories might additionally vary with geographical locations. 
 
-Figure \ref{fig:item-effects} shows considerable variation in drawing recognizability across the 12 categories as a function of geographical site and age.  For example, certain distinctions between similar categories (e.g., cats and rabbits) were more difficult to make, especially for younger children. In addition, children in the Beijing group produced more recognizable drawings of certain categories at all ages -- including airplanes, birds, and rabbits -- while older children in San Jose produced more recognizable drawings of bikes. Figure \ref{fig:example-drawings} shows recognizable, randomly sampled example drawings from 6-year-olds at each category, site, and condition. As a whole, these exploratory analyses provide converging evidence for systematic differences between object categories and geographical site that are not easily attributable to differences in effort.
+Figure \ref{fig:item-effects} shows considerable variation in drawing recognizability across the 12 categories as a function of geographical site and age. For example, certain distinctions between similar categories (e.g., cats and rabbits) were more difficult to make, especially for younger children. In addition, children in the Beijing group produced more recognizable drawings of certain categories at all ages -- including airplanes, birds, and rabbits -- while older children in San Jose produced more recognizable drawings of bikes. Figure \ref{fig:example-drawings} shows recognizable, randomly sampled example drawings from 6-year-olds at each category, site, and condition. As a whole, these exploratory analyses provide converging evidence for systematic differences between object categories and geographical site that are not easily attributable to differences in effort.
 
 ```{r render-drawings, include=FALSE}
 # set.seed(123)
@@ -588,14 +591,9 @@ We found steady improvement from 4-9 years of age in both groups of children, re
 We did not find an effect of cue type, however, suggesting that younger children's drawings are unlikely to be constrained by their ability to recall category-diagnostic visual features when they are trying to draw them. 
 On the other hand, we discovered that drawing recognizability differed between sites, with children in the Beijing group having produced more recognizable drawings than those in the San Jose group. 
 
-To follow up on this effect of site, we tested two potential sources of variation: visuomotor control and effort. 
-Insofar as differences in visuomotor control could explain differences between groups, we reasoned that this would manifest as a difference in tracing ability that predicts variation in drawing recognizability. 
-Instead, we found that children across the two sites were indistinguishable with respect to tracing ability on average, although individual tracing scores were strong predictors of the recognizablity of their own drawings. 
-Next, we evaluated whether there were systematic differences in effort between the two groups, as measured by the amount of time each child spent producing their drawings and the number of strokes drawn. 
-However, we also found that these effort measures could not account for differences in drawing recognizability between groups. 
+To follow up on this effect of site, we found that while there was substantial individual variation in tracing ability and effort, these covariates were insufficient to account for differences in drawing recognizability between groups. 
 In exploratory analyses, we also discovered that the groups differed with respect to which visual concepts were easier for children to convey in their drawings, perhaps reflecting different patterns of exposure to these concepts. 
-**JEFAN QUERY: The previous six sentences were edited for clarity but are redundant with similar sentences in the results section. Perhaps it would be more effective to consolidate them (in Results?) and summarize them more concisely here?**
-While such group differences are intriguing, they are consistent with a number of other potential explanations.
+While these group-level differences are intriguing, they remain consistent with a number of other potential explanations.
 Further systematic investigation within and between geographical, socioeconomic, and cultural contexts will be crucial for producing more precise characterization of developmental variability in drawing behavior, itself critical to strongly evaluate causal theories of such variation [@amir2020cross, @carstensen2021investigating, @winner1989can, @kuwabara2016cultural].
 We have made our drawing dataset publicly available to contribute to this more cumulative effort and to reduce barriers to investigation of other aspects of these drawings other than their recognizability, such as which visual features children prioritized in their drawings, the order in which they drew them, as well as variation in visual style [@gernhardt2015cultural, @senzaki2014holistic]. 
 
