--- a/writing/Manuscript_June2021.Rmd
+++ b/writing/Manuscript_June2021.Rmd
@@ -589,15 +589,16 @@ We manipulated memory demands by either cueing children with a category label ("
 To evaluate the generality of our findings, we recruited two groups of children in different sites: San Jose, USA and Beijing, China. 
 We found steady improvement from 4-9 years of age in both groups of children, replicating prior work conducted in a field setting [@long2021parallel].
 We did not find an effect of cue type, however, suggesting that younger children's drawings are unlikely to be constrained by their ability to recall category-diagnostic visual features when they are trying to draw them. 
+
 On the other hand, we discovered that drawing recognizability differed between sites, with children in the Beijing group having produced more recognizable drawings than those in the San Jose group. 
+In follow-up analyses, we found that while there was substantial individual variation in tracing ability and effort, these covariates were insufficient to account for differences in drawing recognizability between groups. 
+We also discovered that the groups differed with respect to which visual concepts were easier for children to convey in their drawings, perhaps reflecting different patterns of exposure to these concepts. 
+While these group-level differences are intriguing, they remain consistent with wide variety of potential explanations.
+Further systematic investigation of drawing behavior within and between geographical, socioeconomic, and cultural contexts will be crucial for producing more robust and precise estimates of developmental variability, itself critical to strongly evaluate causal theories of such variation [@amir2020cross; @carstensen2021investigating; @winner1989can; @kuwabara2016cultural].
+On the other hand, without such datasets it can be tempting to draw unwarranted causal inferences about the impact of certain demographic variables (e.g., nationality).
+We have made our drawing dataset publicly available to contribute to this more cumulative effort and also to reduce barriers to investigation of other aspects of these drawings other than their recognizability, such as which visual features children prioritized in their drawings, the order in which they drew them, as well as variation in visual style [@gernhardt2015cultural; @senzaki2014holistic]. 
 
-To follow up on this effect of site, we found that while there was substantial individual variation in tracing ability and effort, these covariates were insufficient to account for differences in drawing recognizability between groups. 
-In exploratory analyses, we also discovered that the groups differed with respect to which visual concepts were easier for children to convey in their drawings, perhaps reflecting different patterns of exposure to these concepts. 
-While these group-level differences are intriguing, they remain consistent with a number of other potential explanations.
-Further systematic investigation within and between geographical, socioeconomic, and cultural contexts will be crucial for producing more precise characterization of developmental variability in drawing behavior, itself critical to strongly evaluate causal theories of such variation [@amir2020cross, @carstensen2021investigating, @winner1989can, @kuwabara2016cultural].
-We have made our drawing dataset publicly available to contribute to this more cumulative effort and to reduce barriers to investigation of other aspects of these drawings other than their recognizability, such as which visual features children prioritized in their drawings, the order in which they drew them, as well as variation in visual style [@gernhardt2015cultural, @senzaki2014holistic]. 
-
-Another natural question for future work concerns the relationship between the kind of experience children have with these visual concepts and the way they produce drawings of them. 
+Another natural question for future work concerns the relationship between the kind of experience children have with these visual concepts and the way they produce drawings of them.
 For example, if some children are exposed to a wide variety of illustrations of some concepts but not others (e.g., in books or other media), they may also be able to produce more recognizable drawings of those concepts. 
 Conversely, if some children spend more time drawing certain visual concepts but not others (e.g., in school or at home), they may also be better at recognizing graphical representations of them in other contexts, and perhaps explicitly identifying their diagnostic features. 
 Prior work has found that older children not only produce more recognizable drawings of object categories, but also tend to be better at recognizing other children's drawings [@long2021parallel], providing evidence that visual production and recognition abilities are related throughout childhood at the group level.
