ok one more tweak to that thorny discussion para

--- a/writing/Manuscript_June2021.Rmd
+++ b/writing/Manuscript_June2021.Rmd
@@ -594,9 +594,9 @@ On the other hand, we discovered that drawing recognizability differed between s
 In follow-up analyses, we found that while there was substantial individual variation in tracing ability and effort, these covariates were insufficient to account for differences in drawing recognizability between groups. 
 We also discovered that the groups differed with respect to which visual concepts were easier for children to convey in their drawings, perhaps reflecting different patterns of exposure to these concepts. 
 While these group-level differences are intriguing, they remain consistent with wide variety of potential explanations.
-Further systematic investigation of drawing behavior within and between geographical, socioeconomic, and cultural contexts will be crucial for producing more robust and precise estimates of developmental variability, itself critical to strongly evaluate causal theories of such variation [@amir2020cross; @carstensen2021investigating; @winner1989can; @kuwabara2016cultural].
-On the other hand, without such datasets it can be tempting to draw unwarranted causal inferences about the impact of certain demographic variables (e.g., nationality).
-We have made our drawing dataset publicly available to contribute to this more cumulative effort and also to reduce barriers to investigation of other aspects of these drawings other than their recognizability, such as which visual features children prioritized in their drawings, the order in which they drew them, as well as variation in visual style [@gernhardt2015cultural; @senzaki2014holistic]. 
+Further systematic measurement of drawing behavior across a wider variety of geographical, socioeconomic, and cultural contexts will be crucial for producing more robust and precise estimates of developmental variability, critical to strongly evaluate causal theories of such variation [@amir2020cross; @carstensen2021investigating; @frank2021variability].
+On the other hand, without such datasets it can be tempting to draw unwarranted causal inferences about the impact of single demographic covariates, such as nationality [@winner1989can; @kuwabara2016cultural].
+We have thus made our drawing dataset publicly available to contribute to this more cumulative effort and also to reduce barriers to investigation of other aspects of these drawings other than their recognizability, such as which visual features children prioritized in their drawings, the order in which they drew them, as well as variation in visual style [@gernhardt2015cultural; @senzaki2014holistic]. 
 
 Another natural question for future work concerns the relationship between the kind of experience children have with these visual concepts and the way they produce drawings of them.
 For example, if some children are exposed to a wide variety of illustrations of some concepts but not others (e.g., in books or other media), they may also be able to produce more recognizable drawings of those concepts. 
